[package]
name = "bellpepper-emulated"
version = "0.1.0"
edition = "2021"
authors = ["Saravanan Vijayakumaran <sarva@ee.iitb.ac.in>"]
license = "MIT OR Apache-2.0"
description = "Nonnative arithmetic library using bellpepper inspired by the emulated package in Gnark"
documentation = "https://docs.rs/bellpepper-emulated"
homepage = "https://github.com/lurk-lab/bellpepper-gadgets"
repository = "https://github.com/lurk-lab/bellpepper-gadgets"

[dependencies]
bellpepper-core = { version="0.2.0", default-features = false }
bellpepper = { version="0.2.0", default-features = false }
ff = "0.13.0"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2.15"

[dev-dependencies]
pasta_curves = "0.5.1"
rand = "0.8.5"
